Try to solve issue with 100vh on mobile

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -24,14 +24,16 @@ html {
 }
 
 body {
+  display: flex;
   font-family: $font-stack-sans;
+  min-height: 100vh;
   margin: 0;
 }
 
 #__next {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  flex-grow: 1;
 }
 
 main {
